task has been finished

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,26 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>This is FRONTEND</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&family=EB+Garamond&family=Fredoka&family=Josefin+Sans&family=Josefin+Slab:wght@100&family=Montserrat:ital,wght@0,100;0,300;0,400;0,700;1,400&family=Nunito&family=Nunito+Sans&family=Orbitron&family=Playfair+Display:wght@700&family=Poppins:wght@100;400;700&family=Shippori+Antique+B1&family=Staatliches&family=Tangerine&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id="root"></div>
+	<div id="root">
+		<section>
+			<div class="wrapper">
+				<h1>Password recovery</h1>
+				<div class="content">
+					<p>Please, write the answer of your security question into the following input field and press Enter.<br> Your security question is:</p>
+					<p>What was your first pet's name?</p>
+					<form>
+						<input type="text" id="text" placeholder="Write your first pet's name here...">
+					</form>
+				</div>
+			</div>	
+			<button>?</button>		
+		</section>
+	</div>
 </body>
 </html>
